--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,9 +43,45 @@ services:
     depends_on:
       - db
 
-  load_sample_data_demo:
+  load_sample_demo_data:
     build: .
     command: python3 manage.py load_scenario_data_demo
+    environment:
+      - DEBUG=False
+      - DATABASE_ENGINE=django.db.backends.postgresql
+      - DATABASE_NAME=postgres
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=password #TODO set on postgres instance
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - SECRET_KEY=fsgsweoriqwevnzasdf43
+      - USER_ID='docker'    
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+
+  load_sample_disease_demo:
+    build: .
+    command: python3 manage.py load_scenario_disease_data
+    environment:
+      - DEBUG=False
+      - DATABASE_ENGINE=django.db.backends.postgresql
+      - DATABASE_NAME=postgres
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=password #TODO set on postgres instance
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - SECRET_KEY=fsgsweoriqwevnzasdf43
+      - USER_ID='docker'    
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+
+  load_sample_content_data:
+    build: .
+    command: python3 manage.py load_scenario_content_data
     environment:
       - DEBUG=False
       - DATABASE_ENGINE=django.db.backends.postgresql
