updated feature to do timeliness

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,10 @@ services:
     image: postgres
     volumes: 
       - ./postgres_data:/var/lib/postgresql/data/pgdata
+    ports:
+      - "5433:5432"
+
+
   makemigrations:
     build: .
     command: python3 manage.py makemigrations --settings=dev.settings.dev
